--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -1,72 +1,47 @@
 @font-face {
-  font-family: GolosUi;
+  font-family: UniNeue;
   font-display: swap;
-  src: url("../fonts/GOLOS-UI_BOLD.woff2") format("woff2"), url("../fonts/GOLOS-UI_BOLD.woff") format("woff");
-  font-weight: 700;
+  src: url("../fonts/UniNeueRegular.woff2") format("woff2"), url("../fonts/UniNeueRegular.woff") format("woff");
+  font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
-  font-family: GolosUi;
+  font-family: UniNeue;
   font-display: swap;
-  src: url("../fonts/GOLOS-UI_MEDIUM.woff2") format("woff2"), url("../fonts/GOLOS-UI_MEDIUM.woff") format("woff");
+  src: url("../fonts/UniNeueRegular-Italic.woff2") format("woff2"), url("../fonts/UniNeueRegular-Italic.woff") format("woff");
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: UniNeue;
+  font-display: swap;
+  src: url("../fonts/UniNeueBold.woff2") format("woff2"), url("../fonts/UniNeueBold.woff") format("woff");
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
-  font-family: GolosUi;
+  font-family: UniNeue;
   font-display: swap;
-  src: url("../fonts/GOLOS-UI_REGULAR.woff2") format("woff2"), url("../fonts/GOLOS-UI_REGULAR.woff") format("woff");
-  font-weight: 400;
-  font-style: normal;
-}
-
-
-@font-face {
-  font-family: RobotoCondensed;
-  font-display: swap;
-  src: url("../fonts/RobotoCondensed-Light.woff2") format("woff2"), url("../fonts/RobotoCondensed-Light.woff") format("woff");
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: RobotoCondensed;
-  font-display: swap;
-  src: url("../fonts/RobotoCondensed-LightItalic.woff2") format("woff2"), url("../fonts/RobotoCondensed-LightItalic.woff") format("woff");
-  font-weight: 300;
+  src: url("../fonts/UniNeueBold-Italic.woff2") format("woff2"), url("../fonts/UniNeueBold-Italic.woff") format("woff");
+  font-weight: 500;
   font-style: italic;
 }
 
 @font-face {
-  font-family: RobotoCondensed;
+  font-family: UniNeue;
   font-display: swap;
-  src: url("../fonts/RobotoCondensed-Regular.woff2") format("woff2"), url("../fonts/RobotoCondensed-Regular.woff") format("woff");
-  font-weight: 400;
+  src: url("../fonts/UniNeueBold.woff2") format("woff2"), url("../fonts/UniNeueBold.woff") format("woff");
+  font-weight: 900;
   font-style: normal;
 }
 
 @font-face {
-  font-family: RobotoCondensed;
+  font-family: UniNeue;
   font-display: swap;
-  src: url("../fonts/RobotoCondensed-Regular.woff2") format("woff2"), url("../fonts/RobotoCondensed-Regular.woff") format("woff");
-  font-weight: 400;
-  font-style: italic;
-}
-
-@font-face {
-  font-family: RobotoCondensed;
-  font-display: swap;
-  src: url("../fonts/RobotoCondensed-Bold.woff2") format("woff2"), url("../fonts/RobotoCondensed-Bold.woff") format("woff");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: RobotoCondensed;
-  font-display: swap;
-  src: url("../fonts/RobotoCondensed-BoldItalic.woff2") format("woff2"), url("../fonts/RobotoCondensed-BoldItalic.woff") format("woff");
-  font-weight: 700;
+  src: url("../fonts/UniNeueBlack-Italic.woff2") format("woff2"), url("../fonts/UniNeueBlack-Italic.woff") format("woff");
+  font-weight: 900;
   font-style: italic;
 }
