--- a/src/blocks/main/main.scss
+++ b/src/blocks/main/main.scss
@@ -7,15 +7,41 @@
   background-repeat: no-repeat;
   background-size: cover;
   justify-content: center;
+  padding: 30px;
+  box-sizing: border-box;
+  height: calc(100vh - 235px);
+
+  @media screen and (max-width: 992px) {
+    height: calc(100vh - 206px);
+    padding: 15px;
+  }
+
+  @media screen and (max-width: 769px) {
+    height: auto;
+  }
+
+  & .cont {
+    height: 100%;
+  }
 
   &__wrapper {
     display: flex;
+    align-items: center;
     column-gap: 20px;
+    height: 100%;
+
+    @media screen and (max-width: 992px) {
+      flex-direction: column;
+    }
   }
 
   &__info {
     max-width: 50%;
     width: 100%;
+
+    @media screen and (max-width: 992px) {
+      max-width: 100%;
+    }
   }
 
   &-info {
@@ -35,19 +61,90 @@
         right: 0;
         transform: translateY(-50%);
         z-index: 1;
+
+        @media screen and (max-width: 992px) {
+          display: none;
+        }
       }
     }
 
     &__subtitle {
+      position: relative;
+      width: fit-content;
+      margin-top: 100px;
+
+      @media screen and (max-width: 1440px) {
+        margin-top: 80px;
+      }
+
+      @media screen and (max-width: 1199px) {
+        margin-top: 70px;
+      }
+
+      @media screen and (max-width: 992px) {
+        margin-top: 45px;
+      }
+
+      @media screen and (max-width: 768px) {
+        margin-top: 15px;
+      }
+
+      &:before {
+        content: '';
+        width: 100vw;
+        height: calc(100% - 10px);
+        z-index: 1;
+        display: block;
+        position: absolute;
+        top: 50%;
+        right: 0;
+        transform: translateY(-50%);
+
+        background: linear-gradient(106.34deg, #044B2C 26.62%, #0D8553 60.54%);
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
+        border-radius: 10px;
+      }
     }
 
     &__button {
+      max-width: 390px;
+      height: 75px;
+
+      margin-top: 62px;
+
+      @media screen and (max-width: 1440px) {
+        max-width: 312px;
+        height: 60px;
+        margin-top: 48px;
+      }
+
+      @media screen and (max-width: 1199px) {
+        max-width: 275px;
+        height: 52.5px;
+        margin-top: 43px;
+      }
+
+      @media screen and (max-width: 768px) {
+        display: none;
+      }
     }
   }
 
   &__wheel {
     max-width: 50%;
     width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    @media screen and (max-width: 992px) {
+      max-width: 100%;
+    }
+
+    @media screen and (max-width: 768px) {
+      margin-top: 20px;
+    }
   }
 }
 
@@ -55,12 +152,21 @@
 .wheel {
   position: relative;
   display: flex;
-  max-width: 850px;
+  max-width: 800px;
+  max-height: 800px;
+  height: 100%;
   width: 100%;
 
   &__bg {
     display: flex;
     width: 100%;
+
+    & svg,
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
   }
 
   &__roll {
@@ -69,6 +175,9 @@
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     display: flex;
+    width: calc(100% - 100px);
+    height: calc(100% - 100px);
+    object-fit: contain;
   }
 
   &__point {
@@ -77,14 +186,19 @@
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     display: flex;
+    //
+    //width: calc(100% - 690px);
+    //height: calc(100% - 690px);
+    //object-fit: contain;
   }
 
   &__arrow {
     position: absolute;
     top: 50%;
-    left: 0;
+    left: -15px;
     transform: translateY(-50%);
     display: flex;
+    height: 17%;
   }
 }
 
@@ -97,6 +211,26 @@
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
   position: relative;
   z-index: 2;
+  box-sizing: border-box;
+
+  @media screen and (max-width: 1440px) {
+    font-size: 48px;
+  }
+
+  @media screen and (max-width: 1199px) {
+    font-size: 42px;
+  }
+
+  @media screen and (max-width: 992px) {
+    width: 100%;
+    text-align: center;
+    background: $yellow;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 28px;
+    min-height: 100px;
+  }
 
   &__bgcolor {
     position: relative;
@@ -108,8 +242,8 @@
 
     &:before {
       content: '';
-      width: calc(100% + 20px);
-      height: calc(100% + 10px);
+      width: calc(100% + 10px);
+      height: calc(100% - 10px);
       z-index: 3;
       display: block;
       position: absolute;
@@ -120,6 +254,58 @@
       background: linear-gradient(57.12deg, #D00000 1.3%, #FFB200 103.28%);
       box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
       border-radius: 0px 10px 10px 10px;
+
+      @media screen and (max-width: 992px) {
+        border-radius: 5px;
+        height: 100%;
+      }
+    }
+  }
+}
+
+.main-subtitle {
+  font-weight: 900;
+  font-size: 45px;
+  line-height: 120%;
+  color: $white;
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
+
+  display: flex;
+  align-items: center;
+  column-gap: 20px;
+  position: relative;
+  z-index: 2;
+  padding-right: 20px;
+  box-sizing: border-box;
+
+
+  @media screen and (max-width: 1440px) {
+    font-size: 36px;
+  }
+
+  @media screen and (max-width: 1199px) {
+    font-size: 32px;
+  }
+
+  @media screen and (max-width: 992px) {
+    font-size: 18px;
+  }
+
+  &__img {
+    width: auto;
+    height: 123px;
+    object-fit: contain;
+
+    @media screen and (max-width: 1440px) {
+      height: 98px;
+    }
+
+    @media screen and (max-width: 1199px) {
+      height: 86px;
+    }
+
+    @media screen and (max-width: 992px) {
+      height: 75px;
     }
   }
 }
