--- a/src/scss/comon.scss
+++ b/src/scss/comon.scss
@@ -4,9 +4,9 @@ body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: GolosUi, sans-serif;
-  font-size: 22px;
-  line-height: 140%;
+  font-family: UniNeue, sans-serif;
+  font-size: 18px;
+  line-height: 120%;
   color: $black;
   font-weight: 400;
   min-height: 100vh;
