--- a/src/scss/comon.scss
+++ b/src/scss/comon.scss
@@ -37,6 +37,10 @@ main {
   position: relative;
 }
 
+.cl-blue {
+  color: rgba(49, 118, 252, 1);
+}
+
 @media screen and (max-width: 1199px) {
 }
 
