--- a/src/blocks/main/main.scss
+++ b/src/blocks/main/main.scss
@@ -32,6 +32,7 @@
 
     @media screen and (max-width: 992px) {
       flex-direction: column;
+      justify-content: center;
     }
   }
 
@@ -45,6 +46,9 @@
   }
 
   &-info {
+    position: relative;
+    z-index: 2;
+
     &__title {
       position: relative;
 
@@ -125,7 +129,11 @@
       }
 
       @media screen and (max-width: 768px) {
-        display: none;
+        margin-top: 35px;
+      }
+
+      @media screen and (max-width: 576px) {
+        max-width: 100%;
       }
     }
   }
@@ -140,10 +148,13 @@
 
     @media screen and (max-width: 992px) {
       max-width: 100%;
+      height: auto;
+      margin-top: 20px;
     }
 
     @media screen and (max-width: 768px) {
       margin-top: 20px;
+      flex-direction: column;
     }
   }
 }
@@ -157,9 +168,15 @@
   height: 100%;
   width: 100%;
 
+  @media screen and (max-width: 1440px) {
+    height: auto;
+  }
+
   &__bg {
     display: flex;
     width: 100%;
+    position: relative;
+    z-index: 2;
 
     & svg,
     & img {
@@ -171,6 +188,7 @@
 
   &__roll {
     position: absolute;
+    z-index: 3;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
@@ -178,27 +196,70 @@
     width: calc(100% - 100px);
     height: calc(100% - 100px);
     object-fit: contain;
+
+    @media screen and (max-width: 992px) {
+      width: calc(100% - 85px);
+      height: calc(100% - 85px);
+    }
+
+    @media screen and (max-width: 769px) {
+      width: calc(100% - 70px);
+      height: calc(100% - 70px);
+    }
+
+    @media screen and (max-width: 440px) {
+      width: calc(100% - 60px);
+      height: calc(100% - 60px);
+    }
+
+    @media screen and (max-width: 400px) {
+      width: calc(100% - 45px);
+      height: calc(100% - 45px);
+    }
   }
 
   &__point {
     position: absolute;
+    z-index: 4;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     display: flex;
-    //
-    //width: calc(100% - 690px);
-    //height: calc(100% - 690px);
-    //object-fit: contain;
+    height: 25%;
   }
 
   &__arrow {
     position: absolute;
+    z-index: 5;
     top: 50%;
     left: -15px;
     transform: translateY(-50%);
     display: flex;
     height: 17%;
+  }
+
+  &__coin{
+    position: absolute;
+    z-index: 1;
+    max-width: 50%;
+    width: 100%;
+
+    &--1{
+      left: -17%;
+      top: -1%;
+    }
+    &--2{
+      left: -17%;
+      bottom: -1%;
+    }
+    &--3{
+      right: -17%;
+      bottom: -1%;
+    }
+    &--4{
+      right: -17%;
+      top: -1%;
+    }
   }
 }
 
@@ -289,6 +350,8 @@
 
   @media screen and (max-width: 992px) {
     font-size: 18px;
+    padding-right: 10px;
+    column-gap: 10px;
   }
 
   &__img {
