--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,3 +6,4 @@
 @import "../blocks/header/header";
 @import "../blocks/main/main";
 @import "../blocks/footer/footer";
+@import "../blocks/modal/modal";
