--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -35,6 +35,7 @@
 
     @media screen and (max-width: 1199px) {
       max-width: 33%;
+      font-size: 14px;
     }
 
     @media screen and (max-width: 769px) {
@@ -69,6 +70,7 @@
 
     @media screen and (max-width: 1199px) {
       max-width: 33%;
+      font-size: 14px;
     }
 
     @media screen and (max-width: 769px) {
@@ -96,6 +98,7 @@
 
     @media screen and (max-width: 1199px) {
       max-width: 33%;
+      font-size: 14px;
     }
 
     @media screen and (max-width: 769px) {
