--- a/src/blocks/main/main.scss
+++ b/src/blocks/main/main.scss
@@ -12,7 +12,7 @@
   height: calc(100vh - 235px);
 
   @media screen and (max-width: 992px) {
-    height: calc(100vh - 206px);
+    height: auto;
     padding: 15px;
   }
 
@@ -75,18 +75,10 @@
     &__subtitle {
       position: relative;
       width: fit-content;
-      margin-top: 100px;
+      margin-top: 50px;
 
       @media screen and (max-width: 1440px) {
-        margin-top: 80px;
-      }
-
-      @media screen and (max-width: 1199px) {
-        margin-top: 70px;
-      }
-
-      @media screen and (max-width: 992px) {
-        margin-top: 45px;
+        margin-top: 40px;
       }
 
       @media screen and (max-width: 768px) {
@@ -114,22 +106,16 @@
       max-width: 390px;
       height: 75px;
 
-      margin-top: 62px;
+      margin-top: 20px;
 
       @media screen and (max-width: 1440px) {
         max-width: 312px;
         height: 60px;
-        margin-top: 48px;
       }
 
       @media screen and (max-width: 1199px) {
         max-width: 275px;
         height: 52.5px;
-        margin-top: 43px;
-      }
-
-      @media screen and (max-width: 768px) {
-        margin-top: 35px;
       }
 
       @media screen and (max-width: 576px) {
@@ -168,10 +154,6 @@
   height: 100%;
   width: 100%;
 
-  @media screen and (max-width: 1440px) {
-    height: auto;
-  }
-
   &__bg {
     display: flex;
     width: 100%;
@@ -197,22 +179,17 @@
     height: calc(100% - 100px);
     object-fit: contain;
 
-    @media screen and (max-width: 992px) {
-      width: calc(100% - 85px);
-      height: calc(100% - 85px);
-    }
-
-    @media screen and (max-width: 769px) {
+    @media screen and (max-width: 1440px) {
       width: calc(100% - 70px);
       height: calc(100% - 70px);
     }
 
-    @media screen and (max-width: 440px) {
+    @media screen and (max-width: 769px) {
       width: calc(100% - 60px);
       height: calc(100% - 60px);
     }
 
-    @media screen and (max-width: 400px) {
+    @media screen and (max-width: 440px) {
       width: calc(100% - 45px);
       height: calc(100% - 45px);
     }
@@ -303,18 +280,18 @@
 
     &:before {
       content: '';
-      width: calc(100% + 10px);
+      width: calc(100% + 5px);
       height: calc(100% - 10px);
       z-index: 3;
       display: block;
       position: absolute;
       top: 50%;
-      left: 50%;
+      left: calc(50% + 4px);
       transform: translateX(-50%) translateY(-50%);
 
       background: linear-gradient(57.12deg, #D00000 1.3%, #FFB200 103.28%);
       box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
-      border-radius: 0px 10px 10px 10px;
+      border-radius: 10px;
 
       @media screen and (max-width: 992px) {
         border-radius: 5px;
