--- a/src/blocks/modal/modal.scss
+++ b/src/blocks/modal/modal.scss
@@ -26,6 +26,7 @@
       padding-left: 115px;
       padding-right: 115px;
       max-width: 1345px;
+      background: #05643B;
 
       @media screen and (max-width: 992px) {
         padding-left: 15px;
@@ -39,6 +40,7 @@
       padding-left: 115px;
       padding-right: 115px;
       max-width: 1345px;
+      background: #05643B;
 
       @media screen and (max-width: 1440px) {
         padding-left: 90px;
@@ -61,7 +63,7 @@
     }
   }
 
-  &-active {
+  &--active {
     display: flex;
   }
 
@@ -77,7 +79,7 @@
     box-sizing: border-box;
     position: relative;
     min-height: 600px;
-
+    max-height: calc(100vh - 60px);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -96,6 +98,10 @@
       padding-right: 15px;
       padding-bottom: 24px;
     }
+  }
+
+  &__content {
+    overflow: auto;
   }
 
   &__closer {
@@ -232,6 +238,7 @@
 
     @media screen and (max-width: 992px) {
       font-size: 14px;
+      margin-top: 0;
     }
   }
 
@@ -250,27 +257,59 @@
     font-family: Inter, sans-serif;
     font-weight: 400;
     font-size: 18px;
-    line-height: 22px;
+    line-height: 120%;
     display: flex;
     align-items: center;
     color: $white;
 
-    padding: 13px 20px;
+    padding: 3px;
     box-sizing: border-box;
     filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.4));
     border-radius: 10px;
-    border: 3px solid red;
+    position: relative;
 
     @media screen and (max-width: 992px) {
       font-size: 12px;
     }
 
     @media screen and (max-width: 768px) {
-      padding: 5px;
+      padding: 1.5px;
+    }
+
+    & span {
+      display: block;
+      width: 100%;
+      height: 100%;
+      position: relative;
+      z-index: 2;
+      background: #05643b;
+      border-radius: 10px;
+      padding: 13px 20px;
+
+      @media screen and (max-width: 768px) {
+        padding: 7px;
+      }
+    }
+
+    &:before {
+      content: '';
+      display: block;
+      background: $red-orange;
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border-radius: 10px;
+      z-index: 1;
     }
 
     &:not(:last-child) {
       margin-bottom: 10px;
+
+      @media screen and (max-width: 768px) {
+        margin-bottom: 8px;
+      }
     }
   }
 }
@@ -338,6 +377,7 @@
   &__label {
     position: relative;
     display: flex;
+    align-items: center;
     margin: 0 auto;
     width: fit-content;
   }
@@ -457,53 +497,8 @@
   }
 
   &__sales {
-    margin-top: 25px;
-    filter: drop-shadow(0px 2px 4px rgba(0, 0, 0, 0.4));
-    border-radius: 10px;
-    padding: 11px 31px;
-    box-sizing: border-box;
-    border: 1px solid red;
-    width: fit-content;
-
-    @media screen and (max-width: 992px) {
-      padding: 10px 30px;
-      margin-top: 15px;
+    @media screen and (max-width: 769px) {
       width: 100%;
-    }
-  }
-
-  &__sale {
-    font-weight: 900;
-    font-size: 48px;
-    line-height: 120%;
-    display: flex;
-    align-items: center;
-    column-gap: 30px;
-
-    @media screen and (max-width: 992px) {
-      font-size: 18px;
-      column-gap: 13px;
-      justify-content: center;
-    }
-
-    &--white {
-      color: #FFFFFF;
-
-      @media screen and (max-width: 992px) {
-        width: 85px;
-      }
-    }
-
-    &--yellow {
-      background: linear-gradient(70.31deg, #FFB200 16.15%, #FFE404 84.47%);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      background-clip: text;
-      text-fill-color: transparent;
-
-      @media screen and (max-width: 992px) {
-        width: 76px;
-      }
     }
   }
 
@@ -559,6 +554,7 @@
     width: 33%;
     display: flex;
     align-items: flex-end;
+    position: relative;
 
     @media screen and (max-width: 992px) {
       width: 100%;
@@ -567,6 +563,18 @@
 
     @media screen and (max-width: 769px) {
       margin-top: 0;
+    }
+
+    &--abs {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      z-index: 1;
+    }
+
+    &--static {
+      position: relative;
+      z-index: 2;
     }
 
     & img {
@@ -580,6 +588,82 @@
 
       @media screen and (max-width: 769px) {
         max-height: 202px;
+      }
+    }
+  }
+}
+
+.state-sales {
+  position: relative;
+  width: fit-content;
+  padding: 3px;
+  margin-top: 25px;
+  box-sizing: border-box;
+
+  @media screen and (max-width: 992px) {
+    margin-top: 15px;
+    width: 100%;
+  }
+
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: $red-orange;
+    border-radius: 10px;
+    z-index: 1;
+  }
+
+  &__items {
+
+    border-radius: 10px;
+    padding: 11px 31px;
+    box-sizing: border-box;
+    width: fit-content;
+    background: #05643b;
+    position: relative;
+    z-index: 2;
+
+    @media screen and (max-width: 992px) {
+      padding: 10px 30px;
+      width: 100%;
+    }
+  }
+
+  &__item {
+    font-weight: 900;
+    font-size: 48px;
+    line-height: 120%;
+    display: flex;
+    align-items: center;
+    column-gap: 30px;
+
+    @media screen and (max-width: 992px) {
+      font-size: 18px;
+      column-gap: 13px;
+      justify-content: center;
+    }
+
+    &--white {
+      color: #FFFFFF;
+
+      @media screen and (max-width: 992px) {
+        width: 85px;
+      }
+    }
+
+    &--yellow {
+      background: linear-gradient(70.31deg, #FFB200 16.15%, #FFE404 84.47%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      text-fill-color: transparent;
+
+      @media screen and (max-width: 992px) {
+        width: 76px;
       }
     }
   }
