--- a/src/blocks/footer/footer.scss
+++ b/src/blocks/footer/footer.scss
@@ -28,6 +28,7 @@
     line-height: 120%;
     color: #FFFFFF;
     text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
+    cursor: pointer;
 
     @media screen and (max-width: 1440px) {
       font-size: 16px;
@@ -50,6 +51,13 @@
     & span {
       color: #3176FC;
       text-decoration: underline;
+      transition: 0.2s;
+    }
+
+    &:hover {
+      & span {
+        text-decoration: none;
+      }
     }
   }
 
