--- a/src/blocks/main/main.scss
+++ b/src/blocks/main/main.scss
@@ -197,7 +197,7 @@
 
   &__point {
     position: absolute;
-    z-index: 4;
+    z-index: 5;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
@@ -207,12 +207,14 @@
 
   &__arrow {
     position: absolute;
-    z-index: 5;
+    z-index: 4;
     top: 50%;
-    left: -15px;
-    transform: translateY(-50%);
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
     display: flex;
-    height: 17%;
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
   }
 
   &__coin{
