--- a/src/blocks/main/main.scss
+++ b/src/blocks/main/main.scss
@@ -30,7 +30,7 @@
     column-gap: 20px;
     height: 100%;
 
-    @media screen and (max-width: 992px) {
+    @media screen and (max-width: 769px) {
       flex-direction: column;
       justify-content: center;
     }
@@ -66,7 +66,7 @@
         transform: translateY(-50%);
         z-index: 1;
 
-        @media screen and (max-width: 992px) {
+        @media screen and (max-width: 769px) {
           display: none;
         }
       }
@@ -154,6 +154,11 @@
   height: 100%;
   width: 100%;
 
+  @media screen and (max-width: 992px) {
+    max-width: 300px;
+    max-height: 300px;
+  }
+
   &__bg {
     display: flex;
     width: 100%;
@@ -184,9 +189,9 @@
       height: calc(100% - 70px);
     }
 
-    @media screen and (max-width: 769px) {
-      width: calc(100% - 60px);
-      height: calc(100% - 60px);
+    @media screen and (max-width: 992px) {
+      width: calc(100% - 45px);
+      height: calc(100% - 45px);
     }
 
     @media screen and (max-width: 440px) {
@@ -261,7 +266,7 @@
     font-size: 38px;
   }
 
-  @media screen and (max-width: 992px) {
+  @media screen and (max-width: 769px) {
     width: 100%;
     text-align: center;
     background: $yellow;
