--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -22,14 +22,11 @@
 
   &--red {
     color: $white;
-    background: linear-gradient(88.94deg, #D00000 0%, #FF3434 99.08%);
-    border: 1px solid #D00000;
+    background: #FF3434;
     box-shadow: 0px 2px 4px rgba(95, 2, 2, 0.5);
 
-
     &:hover {
-      background: transparent;
-      color: #D00000;
+      background: #CC0000;
     }
   }
 
